--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,15 @@
     "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1"
   },
   "engines": {
     "node": ">=18.0.0"
   }
+}
+  "engines": {
+    "node": ">=18.0.0"
+  }
+
 }
